Trains.atg
COMPILER Trains $CN
/* Grammar for simple railway trains
   P.D. Terry, Rhodes University, 2017 */

IGNORECASE

COMMENTS FROM "(*" TO "*)" NESTED

IGNORE CHR(0) .. CHR(31)

PRODUCTIONS
  Trains    = { OneTrain } EOF .
  OneTrain  = LocoPart [ Mixed  | Freight "brake" | Passenger] SYNC "." .
  Passenger = HumanPart { HumanPart } .
  Mixed 	= Freight Safe { HumanPart } . 
  Freight 	= Truck { Truck } .
  LocoPart  = "loco" { "loco" } .
  Safe		= "coal" | "closed" | "open" | "cattle" .
  HumanPart = "brake" | { "coach" } "guard" .
  Truck     = "coal" | "closed" | "open" | "cattle" | "fuel" .
END Trains.
